--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Your Favorite Course is CSCE 412 - Cloud Computing</h1>
+                <h1>Your Favorite Course is CSCE 412 - Cloud Computing.</h1>
                 <hr>
                 <p>This demo's primary goal is to learn how to use AWS cloud to launch you own website!</p>
                 <p>The CI/CD Pipeline Connection has been established!</p>
